# guzzle

./: .gitignore  CHANGELOG.md  README.md  arg-backtracking.patch  flake.nix  guzzle.cabal  hix.nix
app/: Capture.hs  Content.hs  Grim.hs  Hyprctl.hs  Main.hs  Persistence.hs  Prelude.hs  Region.hs  Selection.hs  Sink.hs  Slurp.hs  Swaymsg.hs  WfRecorder.hs  WlCopy.hs
